--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       font-family: 'Inter', sans-serif;
     }
 
+    /* Fixed the typo from 'tranform' to 'transform' for smooth transitions */
     .hoverable {
       display: inline-block;
       backface-visibility: hidden;
@@ -104,49 +105,43 @@
 </head>
 <body class="bg-white font-sans">
 
-  <!-- Main container -->
-  <div class="relative min-h-screen">
-    <nav class="bg-white rounded-lg p-4 shadow-lg mb-8">
-      <div class="container mx-auto flex justify-center">
-        <ul class="flex space-x-12">
-          <li><a id="len1" class="hoverable nav-link" href="#">Home</a></li>
-          <li><a id="len2" class="hoverable nav-link" href="#">About</a></li>
-          <li><a id="len3" class="hoverable nav-link" href="#">Portfolio</a></li>
-          <li><a id="len4" class="hoverable nav-link" href="#">Contact</a></li>
-        </ul>
-      </div>
-    </nav>
-
-    <!-- Main content area with the background image -->
-    <div
-      class="w-full h-[80vh] bg-cover bg-center rounded-lg shadow-xl"
-      style="background-image: url('poster.jpg');"
-    >
-      <div class="flex flex-col items-center justify-center h-full text-center text-white p-6">
-        <h2 class="text-4xl sm:text-5xl font-bold mb-4 drop-shadow-md"></h2>
-        <p class="text-lg sm:text-xl leading-snug max-w-2xl drop-shadow-md">
-          
-        </p>
-      </div>
+  <!-- The navigation bar is now fixed at the top of the viewport -->
+  <nav class="fixed top-0 left-0 right-0 bg-white p-4 shadow-lg z-50 rounded-lg">
+    <div class="container mx-auto flex justify-center">
+      <ul class="flex space-x-12">
+        <li><a id="len1" class="hoverable nav-link" href="#">Home</a></li>
+        <li><a id="len2" class="hoverable nav-link" href="#">About</a></li>
+        <li><a id="len3" class="hoverable nav-link" href="#">Portfolio</a></li>
+        <li><a id="len4" class="hoverable nav-link" href="#">Contact</a></li>
+      </ul>
     </div>
+  </nav>
+
+  <!-- This container has top padding to prevent content from being hidden behind the fixed nav bar -->
+  <div class="pt-24">
+    <!-- Display the large image here. Replace the placeholder URL with your poster.jpg -->
+    <img
+      src="poster.jpg"
+      alt="A large poster"
+      class="w-full h-auto block rounded-lg shadow-xl"
+    >
   </div>
 
   <script>
     // This script handles the bounce animation on the navigation links
-   $(function(){
-  var str = '#len'; //increment by 1 up to 1-nelemnts
-  $(document).ready(function(){
-    var i, stop;
-    i = 1;
-    stop = 4; //num elements
-    setInterval(function(){
-      if (i > stop){
-        return;
-      }
-      $('#len'+(i++)).toggleClass('bounce');
-    }, 500)
-  });
-});
+    $(function() {
+      var str = '#len';
+      $(document).ready(function() {
+        var i = 1;
+        var stop = 4; // num elements
+        setInterval(function() {
+          if (i > stop) {
+            return;
+          }
+          $('#len' + (i++)).toggleClass('bounce');
+        }, 500);
+      });
+    });
   </script>
 
 </body>
