--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <div class="pt-24">
     <!-- Display the large image here. Replace the placeholder URL with your poster.jpg -->
     <img
-      src="https://placehold.co/3508x4961/f0f0f0/333333?text=poster.jpg"
+      src="poster.jpg"
       alt="A large poster"
       class="w-full h-auto block rounded-lg shadow-xl"
     >
