--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
   <nav class="fixed top-0 left-0 right-0 bg-white p-4 shadow-lg z-50 rounded-lg">
     <div class="container mx-auto flex justify-center">
       <ul class="flex space-x-12">
-        <li><a id="len1" class="hoverable" href="#">Home</a></li>
-        <li><a id="len2" class="hoverable" href="#">About</a></li>
-        <li><a id="len3" class="hoverable" href="#">Portfolio</a></li>
-        <li><a id="len4" class="hoverable" href="#">Contact</a></li>
+        <li><a id="len1" class="hoverable" href="concept.html">Concept</a></li>
+        <li><a id="len2" class="hoverable" href="program.html">Program</a></li>
+        <li><a id="len3" class="hoverable" href="anstractsandbios.html">Abstracts & Bios</a></li>
+        
       </ul>
     </div>
   </nav>
@@ -77,7 +77,7 @@
   <div class="pt-12">
     <!-- Display the large image here. Replace the placeholder URL with your poster.jpg -->
     <img
-      src="https://placehold.co/3508x4961/f0f0f0/333333?text=poster.jpg"
+      src="poster.jpg"
       alt="A large poster"
       class="w-full h-auto block rounded-lg shadow-xl"
     >
